[package]
name = "beetswap-interop-tests"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[[bin]]
name = "interop-tests-native"
path = "src/bin/native.rs"

[dependencies]
anyhow = "1.0.72"
futures = "0.3.29"
futures-util = "0.3"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
beetswap = { path = "../.." }
blockstore = "0.7"
cid = "0.11"
test-utils = { path = "../test-utils" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
axum = { version = "0.6.19", features = ["http1", "http2"] }
libp2p = { version = "0.54.0", features = [
  "tokio",
  "tcp",
  "identify",
  "macros",
  "noise",
  "yamux",
  "websocket",
  "dns",
  "request-response",
  "cbor",
] }
libp2p-webrtc = { version = "0.8.0-alpha", features = ["tokio"] }
rust-embed = { version = "8.0.0", features = [
  "include-exclude",
  "interpolate-folder-path",
] }
tokio = { version = "1.34", features = [
  "macros",
  "net",
  "rt",
  "signal",
  "process",
] }
tokio-util = { version = "0.7", features = ["compat"] }
tower = "0.4"
tower-http = { version = "0.4.0", features = ["cors"] }
mime_guess = "2.0.4"
thirtyfour = "0.35.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3.66"
tracing-wasm = "0.2.1"
wasm-bindgen = "0.2.90"
wasm-bindgen-futures = "0.4.38"
web-sys = { version = "0.3", features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Response',
  'Window',
] }
tokio = { version = "1.34", features = ["sync"] }
libp2p = { version = "0.54.0", features = [
  "wasm-bindgen",
  "websocket-websys",
  "macros",
  "noise",
  "yamux",
  "websocket",
  "dns",
  "request-response",
  "cbor",
] }
libp2p-webrtc-websys = { git = "https://github.com/DougAnderson444/rust-libp2p.git", branch = "webrtc-websys-deps" }
web-time = "1.1"

[target.wasm32-unknown-unknown.dependencies]
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]

[patch.crates-io]
libp2p = { git = "https://github.com/DougAnderson444/rust-libp2p.git", branch = "core-v0.42-webrtc-utils-0.3.0" }
libp2p-webrtc-utils = { git = "https://github.com/DougAnderson444/rust-libp2p.git", branch = "core-v0.42-webrtc-utils-0.3.0" }
